# simple-blog

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  pyproject.toml  setup.cfg
.github/workflows/: api_test.yml  lint.yml  test.yml
compose/: Dockerfile
compose/run/: Dockerfile
compose/test/: .env.test  Dockerfile
src/: main.py
src/api/di/: __init__.py
src/api/di/providers/: db.py  holder.py  service.py
src/api/routes/: __init__.py  blog.py  user.py
src/core/utils/: auth.py
src/domain/blog/dto/: post.py  user.py
src/domain/blog/exceptions/: base.py  user.py
src/domain/blog/services/: post.py  user.py
src/infrastructure/db/: holder.py  main.py  uow.py
src/infrastructure/db/dao/: base.py  post.py  user.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/migrations/versions/: 04728138da6b_initial.py  9937ff72ab05_initial.py  c73dbfcd75ff_initiall.py  de00f7a37714_add_foreign_key_field.py
src/infrastructure/db/models/: __init__.py  base.py  post.py  user.py
tests/: conftest.py  setup.py  test_db_connection.py
tests/api/: conftest.py
tests/api/blog/: test_models.py  test_routes.py
tests/blog/: conftest.py  test_dao.py  test_db_connection.py  test_models.py  test_routes.py  test_service.py
tests/user/: conftest.py  test_auth.py  test_dao.py  test_dto.py  test_models.py  test_routes.py  test_service.py
